[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dify-memory-plugin"
version = "1.0.0"
description = "Workflow memory plugin for multi-turn conversation context"
authors = [{name = "dynamiclu"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
packages = ["dify_memory_plugin", "dify_memory_plugin.provider", "dify_memory_plugin.tools"]

[tool.setuptools.package-data]
"dify_memory_plugin" = ["manifest.yaml", "PRIVACY.md"]
"dify_memory_plugin.provider" = ["*.yaml"]
"dify_memory_plugin.tools" = ["*.yaml"]

[tool.dify]
plugin = true
